--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Ana Sayfa</title>
+        <link rel="stylesheet" href="css/app.css">
     </head>
     <body>
         <hl>Hoşgeldiniz</hl>
